test/LitTests/SemanticAnalysis/LifetimeMethods/InvalidConstnessSetInvalid.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class TestClass() {
	// CHECK: .loci:6:2: error: lifetime method '::TestClass::__setinvalid' has incorrect const predicate
	void __setinvalid() const noexcept { }
}

// CHECK: 1 error generated.
